Updated to a more readable font and fixed resource html a tag

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -24,7 +24,7 @@ html { height: 100%; }
 
 body {
   color: white;
-  font-family: monospace;
+  font-family: 'Courier New', Courier, monospace;
   font-size: 16px;
   line-height: 1.4;
   margin: 0;
